# pixel-sim-engine

./: .gitignore  .gitmodules  CMakeLists.txt  run.zsh  vcpkg.json
include/: Animation.h  OceanSystem.h  ParallaxLayer.h  PortScene.h  SailingScene.h  Scene.h  SpriteBatch.h  TextureManager.h
scripts/: build.zsh
shaders/: blit.fs.sc  fs_blit.sc  varying.def.sc  vs_sprite.sc
src/: OceanSystem.cpp  ParallaxLayer.cpp  PortScene.cpp  SailingScene.cpp  Scene.cpp  SpriteBatch.cpp  TextureManager.cpp  main.cpp
